[COM_PROJECTS] Minor adjustment to CSS to prevent thumbnail from being squished

--- a/core/templates/kimera/html/com_projects/projects.css
+++ b/core/templates/kimera/html/com_projects/projects.css
@@ -57,6 +57,9 @@
 	.th_image {
 		width: 25px;
 	}
+	td.th_image {
+		width: auto;
+	}
 	.th_image img {
 		width: 25px;
 		height: 25px;
